--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,11 @@
 .image {
   z-index: 10;
   position: absolute;
-  top: -28%;
-  left: 30%;
+  top: -12%;
+  left: 32%;
 
   & img {
-    width: 45vw;
+    width: 35vw;
   }
 }
 
@@ -48,7 +48,7 @@
 .foreground {
   display: flex;
   margin: auto;
-  width: 90%;
+  width: 85%;
   flex-direction: row;
   height: 50%;
   align-items: center;
@@ -75,7 +75,7 @@
 }
 
 .better_future {
-  width: 50%;
+  width: 45%;
   background-color: #1d3501;
   color: white;
   padding-top: 30px;
@@ -94,8 +94,8 @@
 }
 
 .stand_out {
-  font-size: 6rem;
-  line-height: 0.8;
+  font-size: clamp(3rem, 4vw, 4rem);
+  line-height: 1;
   margin-top: 5px;
   margin-bottom: 5px;
   font-weight: 600;
@@ -112,7 +112,7 @@
 }
 
 .tomiwa {
-  width: 40%;
+  width: 42%;
   position: relative;
   display: flex;
   align-items: end;
@@ -183,8 +183,7 @@
   position: relative;
 }
 
-.cta {
-}
+
 
 .button {
   border: 1px solid #1d3501;
@@ -356,8 +355,100 @@
   }
   .phone {
     display: block;
-    margin: 20px auto;
   }
-  .button {
+  .phone_mobile{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 4%;
+  }
+  .logo_mobile{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .logo_images{
+    display: flex;
+    width: 25%;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+    & img {
+      width: 40%;
+    }
+  }
+  .CESS p{
+    text-transform: uppercase;
+    font-size: .7rem;
+    margin: 0;
+    font-weight: 600;
+    &:nth-child(2){
+      color: #d8d035;
+    }
+  }
+
+  .better_future{
+    width: 80%;
+    padding: 20px 0;
+    border-radius: 50px 10px;
+    position: relative;
+    z-index: -9;
+  }
+  .image{
+    top: auto;
+    left: auto;
+    right: 0%;
+    z-index: -8;
+    & img{
+      width: 75vw;
+    }
+  }
+  .stand_out p{
+    font-size: 1.3rem;
+    text-align: center;
+  }
+  .show_forth_1{
+    flex-direction: column;
+    position: relative;
+    align-items: start;
+    gap: 10px;
+    margin-bottom: 30px;
+  }
+  .tomiwa{
+    width: 100%;
+    align-items: center;
+    position: relative;
+  }
+  .post_going_for{
+    width: 75%;
+    border-radius: 50px 10px;
+    margin: auto;
+    position: relative;
+    z-index: 0;
+  }
+  .short_desc{
+    background-color: #1d3501;
+    color: #fff;
+    text-align: center;
+    border-radius: 50px 10px;
+    position: absolute;
+    top: 85%;
+    z-index: -5;
+    font-size: .9rem;
+  }
+  .cta{
+    margin: 65vh auto 0;
+    position: absolute;
+  }
+  .button{
+    width: 70%;
+    text-transform: uppercase;
+    margin-bottom: 5%;
+  }
+  .vote{
+    top: -23%;
+    right:auto;
+    left: 20%;
+    z-index: 100;
   }
 }
